@@ -1,10 +1,6 @@
 (import (rnrs)
-        (mosh test))
+        #;(mosh test))
 
-(define-record-type (&cond1 make-cond1 real-cond1?)
-  (parent &condition)
-  (fields
-   (immutable x real-cond1-x)))
 
-#f
-
+(display (i/o-encoding-error-char (make-i/o-encoding-error 'port 'char)))
+;(bytevector->string #vu8(97 #xff 98 99) (make-transcoder (utf-8-codec) (native-eol-style) (error-handling-mode raise)))
